<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"


    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:baselineAligned="false">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/label_input_loan_sum"
                    android:id="@+id/textView8"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textAlignment="center" />
            </TableLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextSum"
                    android:hint="@string/hint_sum"
                    android:gravity="right"
                    android:textAlignment="center" />
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:baselineAligned="false">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/label_input_term"
                    android:id="@+id/textView9"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textAlignment="center" />
            </TableLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextTerm"
                    android:hint="@string/hint_term"
                    android:gravity="right"
                    android:textAlignment="center" />
            </TableLayout>
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_checkbox_Lk"
            android:id="@+id/checkBoxLk"
            android:layout_marginTop="10sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_calculate"
            android:id="@+id/buttonCalc"
            android:onClick="onClick"
            android:layout_marginTop="10sp" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
